test/ok/0011_simpleAdt.neon
data List (A: Type) = 
| Nil
| Cons (x: A)