test/error/007_nestedNonStrictlyPossitivelyRecurssiveAdt.neon
data NestedBad (A : Type) = 
| MkNestedBad (x : (NestedBad(A) -> A) -> A)